# Shaderfax

./: CMakeLists.txt
src/: DescriptorSet.cpp  DescriptorSet.h  Texel.h  main.cpp
